Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40663

[Windows]: When using windeployqt for an app using QtWebkit 3.0 in a QML file then the qtwebprocess.exe is not deployed nor its dependencies

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.0
    • 5.3.1
    • None
    • Windows 7
    • Cmd line: qttools 957b91e5559f50c09c0c4dc4f45da8941a7de662 (5.4, 28.8.2014, 5.4), Quick dep detection: ea7dd054c8afb0e1cede0eafb0ee3b0042a87a15 (5.4, 1.9.2014,5.4)

    Description

      When using windeployqt for an app using QtWebkit 3.0 in a QML file then the qtwebprocess.exe is not deployed nor its dependencies. This can be reproduced by using windeployqt on the youtubeview example in webkitqml.

      For reference the command line was:

      windeployqt --webkit2 --qmldir d:\dev\qt5.3.1-msvc2013-32bit\5.3\msvc2013\qml release\youtubeview.exe
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes