windeployqt: Detect Quick applications by checking Qt5Quick[d].dll.

Applications no longer have a direct dependency to Qt5Qml[d].dll.

Task-number: QTBUG-40663
Change-Id: I2b3569c3d39f6a96e3f44d6e2541c6697c93bd7f
Reviewed-by: Andrew Knight <andrew.knight@digia.com>